--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.16",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "graphql": "^15.8.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8"
