--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -18,7 +18,8 @@
     "graphql": "^15.8.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
